<resources>
    <string name="app_name">Coinz</string>
    <string name = "navigation_drawer_open">Open naviagation drawer</string>
    <string name = "navigation_drawer_close">Close naviagation drawer</string>

    <string name="access_token">pk.eyJ1IjoieGlhbm1pbmciLCJhIjoiY2pvNmJrN3k1MGZzdTNrb2FuZTBrOXdubSJ9.vds-Scq8-Z-G9evslm13Cw</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="failed"> failed, please try again</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password:</string>
    <string name="edinburgh">Edinburgh</string>
    <string name="email">Email:</string>
    <string name="go_back">Go Back</string>
    <string name="profile">profile</string>
    <string name="log_out">log out</string>
    <string name="setting">setting</string>
    <string name="wallet">wallet</string>
    <string name="bank">bank</string>
    <string name="map">map</string>
    <string name="dolr">DOLR</string>
    <string name="gold">GOLD</string>
    <string name="shil">SHIL</string>
    <string name="quid">QUID</string>
    <string name="peny">PENY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
